--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.0",
+    "socket.io-client": "^4.8.3",
     "tailwind": "^2.3.1",
     "tailwindcss": "^4.1.17"
   },
